# blackflower

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
assets/: README.md  arena.ron  blackflowerc.toml  blackflowerd.toml  client.toml  server.toml
assets/maps/: e1m1.ron
bins/blackflowerc/: Cargo.toml
bins/blackflowerc/src/: app.rs  main.rs
bins/blackflowerd/: Cargo.toml
bins/blackflowerd/src/: app.rs  main.rs  systems.rs
crates/blackflower-arena/: Cargo.toml
crates/blackflower-arena/src/: lib.rs
crates/blackflower-audio/: Cargo.toml
crates/blackflower-audio/src/: lib.rs
crates/blackflower-authority/: Cargo.toml
crates/blackflower-authority/src/: authority.rs  lib.rs  ring.rs
crates/blackflower-client/: Cargo.toml
crates/blackflower-client/src/: lib.rs
crates/blackflower-core/: Cargo.toml
crates/blackflower-core/src/: input.rs  lib.rs  math.rs  time.rs
crates/blackflower-core/src/ecs/: components.rs  mod.rs  systems.rs
crates/blackflower-entity/: Cargo.toml
crates/blackflower-entity/src/: lib.rs
crates/blackflower-gameplay/: Cargo.toml
crates/blackflower-gameplay/src/: lib.rs  plugin.rs  systems.rs
crates/blackflower-graphics/: Cargo.toml
crates/blackflower-graphics/src/: camera.rs  geometry.rs  lib.rs  pipeline.rs  pipelines.rs  renderer.rs  shader.wgsl
crates/blackflower-input/: Cargo.toml
crates/blackflower-input/src/: components.rs  lib.rs
crates/blackflower-math/: Cargo.toml
crates/blackflower-math/src/: components.rs  lib.rs
crates/blackflower-net/: Cargo.toml
crates/blackflower-net/src/: cert.rs  client.rs  lib.rs  messages.rs  server.rs
crates/blackflower-network/: Cargo.toml
crates/blackflower-network/src/: cert.rs  client.rs  connection.rs  delay.rs  lib.rs  messages.rs  server.rs
crates/blackflower-physics/: Cargo.toml
crates/blackflower-physics/src/: collision.rs  components.rs  hitscan.rs  lib.rs  systems.rs
crates/blackflower-plugin/: Cargo.toml
crates/blackflower-prediction/: Cargo.toml
crates/blackflower-prediction/src/: lib.rs
crates/blackflower-protocol/: Cargo.toml
crates/blackflower-protocol/src/: lib.rs
crates/blackflower-render/: Cargo.toml
crates/blackflower-render/src/: camera.rs  geometry.rs  lib.rs  pipelines.rs  renderer.rs  shader.wgsl
crates/blackflower-replica/: Cargo.toml
crates/blackflower-replica/src/: clock.rs  lib.rs  prediction.rs  replica.rs
crates/blackflower-server/: Cargo.toml
crates/blackflower-server/src/: lib.rs
crates/blackflower-tick/: Cargo.toml
crates/blackflower-tick/src/: lib.rs
crates/blackflower-time/: Cargo.toml
crates/blackflower-time/src/: lib.rs
crates/blackflower-window/: Cargo.toml
crates/blackflower-window/src/: lib.rs
crates/blackflower-world/: Cargo.toml
crates/blackflower-world/src/: arena.rs  lib.rs  presentation.rs  replication.rs  simulation.rs
docs/: ARCHITECTURE.md  architecture.md
plugins/arena-shooter/: Cargo.toml
plugins/e1m1/: Cargo.toml
plugins/e1m1/src/: lib.rs
wit/: game-plugin.wit
