[package]
name = "blackflowerc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
blackflower-audio.workspace = true
blackflower-entity.workspace = true
blackflower-graphics.workspace = true
blackflower-input.workspace = true
blackflower-math.workspace = true
blackflower-network.workspace = true
blackflower-protocol.workspace = true
blackflower-tick.workspace = true
blackflower-window.workspace = true
blackflower-world.workspace = true

anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
