[package]
name = "blackflowerc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
blackflower-graphics.workspace = true
blackflower-input.workspace = true
blackflower-replica.workspace = true
blackflower-window.workspace = true

anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
