[package]
name = "blackflower-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
blackflower-math.workspace = true

anyhow.workspace = true
kira.workspace = true
tracing.workspace = true

[lints]
workspace = true
