[package]
name = "blackflower-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
glam.workspace = true
hashbrown.workspace = true
hecs.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
