[package]
name = "blackflower-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
quinn = "0.11.9"
rcgen = "0.14.8"
rustls = "0.23.40"
tokio = "1.52.3"

[lints]
workspace = true
