[package]
name = "blackflower-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

bytes = "1.11.1"
quinn = "0.11.9"
postcard = { version = "1.1.3", features = ["use-std"] }
rcgen = "0.14.8"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }

[lints]
workspace = true
