[package]
name = "blackflower-network"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
quinn.workspace = true
postcard.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
