[package]
name = "blackflower-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
pollster.workspace = true
wgpu.workspace = true

[lints]
workspace = true
