[package]
name = "blackflower-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
blackflower-core.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
tracing.workspace = true
wgpu.workspace = true

[lints]
workspace = true
