[package]
name = "blackflower-replica"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
blackflower-gameplay.workspace = true
blackflower-input.workspace = true
blackflower-math.workspace = true
blackflower-network.workspace = true
blackflower-protocol.workspace = true
blackflower-tick.workspace = true
blackflower-world.workspace = true

anyhow.workspace = true
arc-swap.workspace = true
hashbrown.workspace = true
tracing.workspace = true

[lints]
workspace = true
