[package]
name = "blackflower-window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
raw-window-handle.workspace = true
tracing.workspace = true
winit.workspace = true

[lints]
workspace = true
