[package]
name = "blackflower-world"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
blackflower-math.workspace = true
blackflower-protocol.workspace = true
blackflower-tick.workspace = true

anyhow.workspace = true
hashbrown.workspace = true
hecs.workspace = true
ron.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
